2006-01-13  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/ZGlass.h:
	Stamping: added 'if mSaturn' prior to Ray creation. This was
	causing segv during WSSeed::on_rebuild() (which uses stamping to
	signal retriangulation) when called from AList::RebuildListRefs()
	from ZComet import.

2006-01-06  Matevz Tadel  <matevz.tadel@ijs.si>

	* glass.list:
	* Glasses/ZGlColorFader.cxx:
	* Glasses/ZGlColorFader.h:
	* Rnr/GL/ZGlColorFader_GL_Rnr.cxx:
	* Rnr/GL/ZGlColorFader_GL_Rnr.h:
	New glass ZGlColorFader; somewhat supports centrally scaled color,
	point size and line width.

	* Rnr/GL/GLRnrDriver.cxx:
	* Rnr/GL/GLRnrDriver.h:
	Added support for ZGlColorFader rnr-mod.

	* RnrBase/RnrDriver.h:
	Added method RnrDriver::RMStack::get_active().

	* Rnr/GL/Box_GL_Rnr.cxx:
	* Rnr/GL/Cylinder_GL_Rnr.cxx:
	* Rnr/GL/Sphere_GL_Rnr.cxx:
	* Rnr/GL/ZGlBlending_GL_Rnr.cxx:
	* Rnr/GL/ZGlBlending_GL_Rnr.h:
	Use color/point-size/line-width from GLRnrDriver.

2005-12-24  Matevz Tadel  <matevz.tadel@ijs.si>

	Port to gcc-4 and OSX. Some other fixes.
	
	* Glasses/AList.cxx:
	* Glasses/AList.h:
	* Glasses/ZGlass.cxx:
	* Glasses/ZGlass.h:
	* Glasses/ZList.cxx:
	* Glasses/ZNameMap.cxx:
	Better stamping; gcc-4.

	* Glasses/Eventor.cxx:
	* Glasses/Eventor.h:
	* Glasses/Operator.cxx:
	* Glasses/Operator.h:
	Added virtual function ResetRecursively().

	* Glasses/WGlButton.cxx:
	* Glasses/WGlButton.h:
	Added optional callback-beta link and method ExitGled() (does not
	belong here, really).

	* Glasses/WGlDirectory.cxx:
	* Glasses/WGlDirectory.h:
	Added local link LastClicked.

	* Glasses/ZGlPerspective.cxx:
	Removed origin setting from standard-setters.

	* Glasses/ZHashList.h:
	Added missing virtual method el_type().

	* Glasses/ZNode.h:
	Added non-const ZTrans& ref_trans() for faster low-level
	operations.

	* Glasses/ZQueen.cxx:
	Added argument checks in RemoveLens[es]().

	* Gled/GCondition.cxx:
	* Gled/GCondition.h:
	Added methods LockSignal() and LockBroadcast().

	* Gled/GMutex.cxx: